# AOC2024

./: .gitignore  README.md  pyproject.toml
AOC2024/day1/: lists_sorted.py  part1.py  part2.py
AOC2024/day2/: day2.py  part1.py  part2.py
